# Laboratorio_Automatizacion

./: .gitignore  Cargo.toml  README.md
labo/: Cargo.toml
labo/src/: main.rs  random_utils.rs  writer.rs
labo/src/generators/: autor.rs  autor_libro.rs  autor_tesis.rs  departamento.rs  editorial.rs  estudiante.rs  libro.rs  libro_autor_tesis.rs  mod.rs  prestamo.rs
output/: autor.csv  autor_libro.csv  autor_tesis.csv  departamento.csv  editorial.csv  estudiante.csv  libro.csv  libro_autor_tesis.csv  prestamo.csv
