[package]
name = "main"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
fakeit = "1.3.0"
rand     = "0.8"
csv      = "1.3"         
anyhow   = "1.0"
chrono   = { version = "0.4", default-features = false, features = ["clock"] }
